--- a/themes/default/statics/css/master.styles.css
+++ b/themes/default/statics/css/master.styles.css
@@ -13928,8 +13928,8 @@ body
   flex-wrap: wrap;
   justify-content: flex-start;
   overflow: hidden;
-  margin-left: -5px;
-  margin-right: -5px;
+  /* margin-left: -5px;
+  margin-right: -5px; */
 }
 
 body
