--- a/themes/default/statics/scss/apps/common/parts/_pubbox.scss
+++ b/themes/default/statics/scss/apps/common/parts/_pubbox.scss
@@ -320,8 +320,8 @@ div.timeline-pubbox-container {
                             flex-wrap: wrap;
                             justify-content: flex-start;
                             overflow: hidden;
-                            margin-left: -5px;
-                            margin-right: -5px;
+                            // margin-left: -5px;
+                            // margin-right: -5px;
                             div.pubbox-images__list-item {
                                 width: 25%;
                                 max-width: 25%;
